[gd_scene load_steps=11 format=3 uid="uid://wgtxdq5b6xgh"]

[ext_resource type="Script" path="res://Menu/Credits.gd" id="1_1hca0"]
[ext_resource type="Theme" uid="uid://fokx2du4r6xh" path="res://Menu/MainMenu.tres" id="1_62fse"]
[ext_resource type="PackedScene" uid="uid://42q6vd88na6l" path="res://fade_in/FadeIn.tscn" id="2_khrmr"]
[ext_resource type="Texture2D" uid="uid://basdhjtgotu44" path="res://Menu/background.png" id="3_boncf"]
[ext_resource type="FontFile" uid="uid://bug6bdct05sxs" path="res://Menu/ARIAL.TTF" id="3_s0b1i"]
[ext_resource type="PackedScene" uid="uid://dok3pjh1bn7q7" path="res://Menu/UISound.tscn" id="5_pnpku"]

[sub_resource type="FontFile" id="FontFile_1fwo1"]
fallbacks = Array[Font]([ExtResource("3_s0b1i")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_7jto2"]
fallbacks = Array[Font]([ExtResource("3_s0b1i")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_mqjhl"]
fallbacks = Array[Font]([ExtResource("3_s0b1i")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="FontFile_r0rs0"]
fallbacks = Array[Font]([ExtResource("3_s0b1i")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/50/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/50/0/kerning_overrides/30/0 = Vector2(0, 0)
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/30/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/50/0 = Vector2(0, 0)
cache/0/30/0/kerning_overrides/30/0 = Vector2(0, 0)

[node name="Credits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_62fse")
script = ExtResource("1_1hca0")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("3_boncf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 852.0
offset_top = 420.0
offset_right = 1152.0
offset_bottom = 720.0
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Credits"
horizontal_alignment = 1
uppercase = true

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Music Sound" type="Label" parent="VBoxContainer/HBoxContainer1"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_1fwo1")
text = "Music: jackboyman"
uppercase = true

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Game Sound" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_7jto2")
text = "Game: jackboyman"
uppercase = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="FullScreen" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = SubResource("FontFile_mqjhl")
text = "Art: jackboyman"
uppercase = true

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontFile_r0rs0")
text = "BACK"
flat = true

[node name="FadeIn" parent="." instance=ExtResource("2_khrmr")]
visible = false
layout_mode = 0

[node name="UISound" parent="." instance=ExtResource("5_pnpku")]

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
